# diddle

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: analyze_wav.rs
src-tauri/src/: cluster.rs  ipc.rs  lib.rs  log_storage.rs  main.rs  scp.rs  scp_starter.txt  wav_player.rs
src-tauri/src/dsp/: agc.rs  biquad.rs  mod.rs  multi_decoder.rs  rtty.rs  rtty_tx.rs  scope.rs  spectrum.rs
src-tauri/src/logbook/: mod.rs
src-tauri/src/tci/: client.rs  mod.rs  protocol.rs
src/lib/: BandmapPanel.svelte  CollapsiblePanel.svelte  DecoderView.svelte  EntryWindow.svelte  FKeys.svelte  Header.svelte  Logbook.svelte  SettingsPanel.svelte  TciConsole.svelte  TestPanel.svelte  TuningScope.svelte  Waterfall.svelte  bands.ts  cluster.svelte.ts  contests.ts  entry.svelte.ts  exports.ts  macros.svelte.ts  qsoLog.svelte.ts  rttyConfig.svelte.ts  settings.svelte.ts  spots.svelte.ts  tci.ts  types.ts
src/routes/: +page.svelte
