[package]
name = "diddle"
version = "0.1.2"
description = "RTTY contest logger — TCI-first, rate-focused"
authors = ["lee@remotehamradio.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "diddle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"

# Async runtime + websockets for TCI
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2"

# Errors + logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DSP
rustfft = "6"

# HTTP (for fetching MASTER.SCP from supercheckpartial.com). rustls-tls keeps
# the build self-contained — no system OpenSSL needed on macOS/Linux/Windows.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

